a bit more cleanup to the post

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,8 +16,7 @@
     <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:site_name" content="{{ site.title }}">
-    <!-- <meta property="og:image" content="{{ site.url }}/"> -->
-    <meta property="og:image" content="http://imgsv.imaging.nikon.com/lineup/lens/zoom/normalzoom/af-s_dx_18-140mmf_35-56g_ed_vr/img/sample/sample1_l.jpg">
+    <meta property="og:image" content="{{ site.url }}/assets/img/profile.jpg">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@kirjai">
