--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
   <div class="header">
     <div class="column-1">
-      <img src="https://abs.twimg.com/sticky/default_profile_images/default_profile_2_200x200.png">
+      <img src="{{ site.url }}/assets/img/profile.jpg">
     </div>
     <div class="column-2">
       <p>Kirils Ladovs. Front end Developer at <a href="http://www.flypay.co.uk" target="_blank" class="accent">Flypay</a> with focus on Web Performance, JavaScript and Angular.</p>
