--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:site_name" content="{{ site.title }}">
-    <meta property="og:image" content="{{ site.url }}/assets/img/profile.jpg">
+    <meta property="og:image" content="{{ site.url }}/assets/img/profile400.jpg">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@kirjai">
