--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,5 +11,12 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
-
 </article>
+
+  <div class="social post">
+    <!-- <a href="https://twitter.com/intent/tweet?text={{page.title | truncatewords: 5}} {{site.url}}{{page.permalink}} @kirjai"> -->
+      <p>Share this post</p>
+      <a href="https://twitter.com/intent/tweet?text={{page.title | truncatewords: 5}} @kirjai" class="twitter-share-button">Tweet</a>
+    <!-- </a> -->
+
+  </div>
