--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -72,11 +72,12 @@ nav {
 }
 
 .post {
-  padding: 15px;
+  padding: 15px 30px;
   background-color: #fff;
   max-width: 770px;
   margin: auto;
   margin-top: 15px;
+  box-shadow: 0px 0px 10px lightgray;
 }
 
 .post__meta {
@@ -179,5 +180,11 @@ body {
 .post-content {
   p {
     margin: 20px 0;
+  }
+}
+
+.social {
+  span {
+    text-decoration: underline;
   }
 }
