feat: component-testing-with-routerlink article

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <img src="{{ site.url }}/assets/img/profile400.jpg">
     </div>
     <div class="column-2">
-      <p>Kirils Ladovs. Front end Developer at <a href="http://www.flypay.co.uk" target="_blank" class="accent">Flypay</a> with focus on Web Performance, JavaScript and Angular.</p>
+      <p>Kirils Ladovs. Front end developer at <a href="http://www.flypay.co.uk" target="_blank" class="accent">Flypay</a> with focus on Web Performance, JavaScript and Angular.</p>
       <a class="twitter-follow-button" href="https://twitter.com/kirjai" data-show-count="false">Follow @kirjai</a>
       <script>window.twttr=(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],t=window.twttr||{};if(d.getElementById(id))return t;js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);t._e=[];t.ready=function(f){t._e.push(f);};return t;}(document,"script","twitter-wjs"));</script>
     </div>
