bug: twitter card image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
     <meta name="twitter:site" content="@kirjai">
     <meta name="twitter:title" content="{{ page.title }}">
     <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-    <meta name="twitter:image" content="{{ site.url }}/img/og.jpg">
+    <meta name="twitter:image" content="{{ site.url }}/assets/img/profile400.jpg">
   {% endif %}
 
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:700|Gentium+Basic' rel='stylesheet' type='text/css'>
