--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
-  <link rel="shortcut icon" type="image/png" href="http://www.kirjai.com/favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="https://www.kirjai.com/favicon.png"/>
   <link rel="shortcut icon" type="image/png" href="{{ site.url }}/favicon.png"/>
   <link rel="me" href="https://twitter.com/twitterdev">
     {% if page.title %}
