--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <h2>Getting in touch</h2>
     <p>The best and easiest way to get in touch with me is on
-      <a href="http://www.twitter.com/{{ site.twitter_username }}" target="_blank" class="accent">Twitter</a>.
+      <a href="https://www.twitter.com/{{ site.twitter_username }}" target="_blank" class="accent">Twitter</a>.
       Alternatively, you can contact me via <a href="mailto:{{ site.email }}" target="_blank" class="accent">email</a>.</p>
     <div class="footer__links">
 
